--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ### Build ###
 build/
+
+### Core files ###
 core.*
 
 ### Editors ###
@@ -7,7 +9,6 @@ core.*
 .cache/
 
 ### github/gitignore/C++ ###
-
 # Prerequisites
 *.d
 
