--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,9 +2,11 @@ if (BUILD_TESTING)
     add_executable(tests
         main.cpp
         unit/lexer.cpp
+        unit/parser.cpp
     )
     target_link_libraries(tests PRIVATE GTest::gtest_main)
     target_sources(tests PRIVATE ${PROJECT_SOURCE_DIR}/src/lexer.cpp)
+    target_sources(tests PRIVATE ${PROJECT_SOURCE_DIR}/src/parser.cpp)
     target_include_directories(tests PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
     include(GoogleTest)
