--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ if (BUILD_TESTING)
     target_link_libraries(tests PRIVATE GTest::gtest_main ${llvm_libs})
     target_sources(tests PRIVATE ${PROJECT_SOURCE_DIR}/src/lexer.cpp)
     target_sources(tests PRIVATE ${PROJECT_SOURCE_DIR}/src/parser.cpp)
+    target_sources(tests PRIVATE ${PROJECT_SOURCE_DIR}/src/ast.cpp)
     target_sources(tests PRIVATE ${PROJECT_SOURCE_DIR}/src/llvm_components.cpp)
     target_include_directories(tests PRIVATE ${PROJECT_SOURCE_DIR}/include)
     find_package(LLVM REQUIRED CONFIG)
